0.3.8:
- Switching between tabs can now be made in two ways, either the previous fling gesture method, or by using dedicated buttons which are displayed and hidden along with toolbars. The method is customizable in UI preferences. Default is to use he new buttons. 
- New options allowing to display or not the application title bar.

0.3.7:
- Chinese translation.
- Add Share page, Share link, Share image and Share email options.
- Toolbars are now shown and hidden with a quick animation.

0.3.6:
- Volume keys behaviour can be customized to either zoom, switch tabs, navigate in history, or have default behaviour (e.g. change volume). Default is to change volume.
- Plugins management bugfixes.
- Favicon size in now normalized, based on screen density.
- Movable to SD Card.

0.3.5:
- Websites can be displayed in a "fake" mobile view, provided by Google GWT; This can be done on-demand, or automatically through in list of websites in preferences;
- Plugins support;
- Untrusted SSL certificates support;

0.3.4:
- By popular demand, added a "Close" button, although i do not see the need for it :).
- Added "Home" button in url bar (can be hidden in preferences).
- Added "Clear cache on exit" option in privacy settings.
- Context menu for images and mailto links added.
- Text can be selected and copied to clipboard.
- Added notifications for download start/end.

0.3.3:
- Search can be done from the url bar. The search url is customizable.
- The start page can be customized.
- The start page can show a search box.
- The browser user agent can be customized.
- The ad blocker white list is now stored in database.
- Url bar now display favicons.
- Bookmarks can be exported to Android browser bookmarks.
- Improved suggestions in url bar, now search in history and bookmarks; better design.

0.3.2:
- Added start page, showing most used bookmarks and recent history.
- Bookmarks can be sorted by hit count.
- Change icon set to match Android guidelines.